--- a/MovieReservation.API/appsettings.Development.json
+++ b/MovieReservation.API/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;TrustServerCertificate=True;Database=movie_reservation;User Id=SA;Password=reallyStrongPwd123"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=movie_reservation;Username=postgres;Password=mysecretpassword;Include Error Detail=True"
   },
   "JwtSettings": {
     "Key": "This is a sample secret key - please don't use in production environment.",
