Added users service

--- a/MovieReservation.API/appsettings.Development.json
+++ b/MovieReservation.API/appsettings.Development.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=movie_reservation;Username=postgres;Password=mysecretpassword;Include Error Detail=True"
   },
+  "CachingTimeByMinutes": 1,
   "JwtSettings": {
     "Key": "This is a sample secret key - please don't use in production environment.",
     "Issuer": "movieReservationIssuer.com"
