--- a/MovieReservation.Business/MovieReservation.Business.csproj
+++ b/MovieReservation.Business/MovieReservation.Business.csproj
@@ -9,16 +9,14 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1"/>
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.11"/>
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.11" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\MovieReservation.Data\MovieReservation.Data.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Interface\" />
-      <Folder Include="Model\" />
-      <Folder Include="Service\" />
     </ItemGroup>
 
 </Project>
